--- a/index.html
+++ b/index.html
@@ -14,26 +14,28 @@
 <body>
   <div id="root"></div>
   <script type="text/babel">
-
-    ReactDOM.render(
-      <h1>Hello, world!</h1>,
-      document.getElementById('root')
-    );
-
+    const App = () => {
+      React.useEffect(() => {
+        grecaptcha.render('html_element', {
+          sitekey: '6Le1Q-4aAAAAAPxiA-8un2vTzU5PoCw9-wWwD7Wr'
+        });
+      }, []);
+      return (
+        <div>
+          <div id="html_element"></div>
+        </div>
+      )
+    }
+    const onloadCallback = () => {
+      ReactDOM.render(
+        <App />,
+        document.getElementById('root')
+      );
+    };
   </script>
-  <!--
-      Note: this page is a great way to try React but it's not suitable for production.
-      It slowly compiles JSX with Babel in the browser and uses a large development build of React.
+  <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer>
+  </script>
 
-      Read this section for a production-ready setup with JSX:
-      https://reactjs.org/docs/add-react-to-a-website.html#add-jsx-to-a-project
-
-      In a larger project, you can use an integrated toolchain that includes JSX instead:
-      https://reactjs.org/docs/create-a-new-react-app.html
-
-      You can also use React without JSX, in which case you can remove Babel:
-      https://reactjs.org/docs/react-without-jsx.html
-    -->
 </body>
 
 </html>
