--- a/infinity.html
+++ b/infinity.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>無限reCaptcha</title>
+  <title>無限reCAPTCHA</title>
   <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css" />
@@ -29,7 +29,7 @@
           <section className="hero is-primary">
             <div className="hero-body">
               <p className="title">
-                無限reCaptcha
+                無限reCAPTCHA
               </p>
             </div>
           </section>
